2011-12-07  Jakub Jelinek  <jakub@redhat.com>

	PR c++/51401
	* decl.c (grokdeclarator): Error for auto on non-static data members.

	PR c++/51429
	* typeck2.c (cxx_incomplete_type_diagnostic): Don't
	ICE if TREE_OPERAND (value, 1) is overloaded.

	PR c++/51229
	* decl.c (reshape_init_class): Complain if d->cur->index is
	INTEGER_CST.
	* parser.c (cp_parser_initializer_list): If cp_parser_parse_definitely
	fails, clear designator.

	PR c++/51369
	* init.c (build_value_init): Allow array types even when
	processing_template_decl.

2011-12-07  Ed Smith-Rowland <3dw4rd@verizon.net>

	PR c++/51420
	* parser.c (lookup_literal_operator): Check that declaration is an
	overloaded function.

2011-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/51430
	* pt.c (tsubst_decl): Don't call strip_array_domain on
	error_mark_node.

2011-12-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51431
	* init.c (build_value_init): Check build_aggr_init_expr return
	value for error_mark_node.

2011-12-06  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51427
	* parser.c (cp_parser_check_class_key): Add note about earlier
	declaration.

2011-12-05  Fabien Chêne  <fabien@gcc.gnu.org>

	PR c++/51319
	* semantics.c (finish_id_expression): Strip using declarations
	early in the function.

2011-12-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51399
	* init.c (perform_member_init): Early return if init is error_mark_node.

2011-12-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51414
	* semantics.c (finish_underlying_type): Use %qT, not %qE for the
	error message.

2011-12-05  Jason Merrill  <jason@redhat.com>

	* init.c (expand_default_init): Unshare args in ctor delegation.

2011-12-05  Ville Voutilainen  <ville.voutilainen@gmail.com>
	    Pedro Lamarão  <pedro.lamarao@gmail.com>

	Implement C++11 delegating constructors.
	* cp-tree.h (enum cpp0x_warn_str): Add CPP0X_DELEGATING_CTORS.
	* error.c (maybe_warn_cpp0x): Adjust.