@@ -1,3 +1,8 @@
+2011-12-08  Jason Merrill  <jason@redhat.com>
+
+	PR c++/51459
+	* g++.dg/cpp0x/lambda/lambda-template4.C: New.
+
 2011-12-08  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/51466
